# adventofcode

./: .gitignore
2020/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day17.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  testday1.py  testday10.py  testday11.py  testday12.py  testday13.py  testday14.py  testday15.py  testday17.py  testday2.py  testday3.py  testday4.py  testday5.py  testday6.py  testday7.py  testday8.py  testday9.py
CPP/2019/: meson.build
CPP/2019/src/: Day1.cpp  RunCode.cpp
CPP/2019/test/: Day1_test.cpp
java/2021/: pom.xml
java/2021/src/: RunCode.java
java/2021/src/bjorn/adventofcode/: Bingo.java  Board.java  Diagnostics.java  RunCode.java  Sonar.java  Submarine.java
java/2021/src/bjorn/adventofcode/day13/: Dot.java  Manual.java
java/2021/src/bjorn/adventofcode/day18/: SnailFishCalculator.java  SnailNumber.java
java/2021/src/bjorn/adventofcode/day2/: Submarine.java
java/2021/test/: Day13Test.java  Day15Test.java  Day18Test.java  Day1Test.java  Day2Test.java  Day3Test.java  Day4Test.java  Day5Test.java  Day6Test.java  Day7Test.java  Day8Test.java  Day9Test.java
java/2022/: pom.xml
java/2022/src/bjorn/adventofcode/: RunCode.java
java/2022/test/bjorn/adventofcode/: Day1Test.java  Day2Test.java  Day3Test.java
python/2023/: day1.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day9.py  testday1.py  testday11.py  testday2.py  testday3.py  testday4.py  testday5.py  testday6.py  testday7.py  testday9.py
python/2024/: day1.py  day2.py  testday1.py  testday2.py
(+23 files in other folders)
